--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">Formula R</string>
+
+
+    <!-- Main Menu -->
+    <string name="btn_create_group">Create a group</string>
+    <string name="btn_join_group">Join to group</string>
+    <string name="prgrss_searching_groups">Searching available groups...</string>
+    <string name="prgrss_connecting_to_group">Connecting to the group...</string>
+    <string name="toast_not_found_groups">Sorry, there aren\'t any group nearby</string>
+
+    <!-- Group Creation Dialog -->
+    <string name="label_group_name">Group name:</string>
+    <string name="btn_accept">Accept</string>
+    <string name="btn_cancel">Cancel</string>
+
+    <!-- Group Chat Activity -->
+    <string name="send_button">Send</string>
+    <string name="device_connected">%s device connected to the group</string>
+    <string name="device_disconnected">%s device disconnected from the group</string>
+
 </resources>
