--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Formula R</string>
+    <string name="app_name">Formular</string>
 
     <!-- Main Menu -->
     <string name="btn_create_group">Create a group</string>
@@ -28,4 +28,6 @@
     <string name="race_position_1">2nd</string>
     <string name="race_position_2">3rd</string>
     <string name="race_position_default">%dth</string>
+    <string name="race">Race</string>
+    <string name="customize">Customize</string>
 </resources>
