--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,11 @@
     <string name="race_position_2">3rd</string>
     <string name="race_position_default">%dth</string>
     <string name="race">Race</string>
+    <string name="new_race">New Race</string>
     <string name="customize">Customize</string>
+    <string name="course_library">Course Library</string>
+    <string name="search">Search</string>
+    <string name="race_settings">Race Settings</string>
+    <string name="_continue">Continue</string>
+    <string name="spectators">Allow Spectators</string>
 </resources>
